Fixed overflow issue on mobile screens

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -11,6 +11,10 @@
     box-sizing: border-box;
 }
 
+html {
+    overflow-x: hidden;
+}
+
 body {
     font-size: 100%;
     // font-family: 'Poppins', 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
